# BrainDrive-Scout

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/scout/: config.py  main.py
src/scout/api/: routes.py
src/scout/models/: schemas.py
src/scout/services/: analyzer.py  context.py  fetcher.py  logger.py
static/: index.html
